--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -10,7 +10,10 @@ templ Layout(name string) {
 			@templ.Raw(ctx.Value("assets").(string))
 		</head>
 		<body>
-			{ children... }
+			<h1>Hello {name}</h1>
+			<main>
+				{ children... }
+			</main>
 		</body>
 	</html>
 }
